# log-analyzer

./: .gitignore  CMakeLists.txt  Makefile  PHASE1_TESTS.md  README.md  create_icons.sh  imgui.ini  log_analyzer_config.ini  log_analyzer_gui_glass  log_analyzer_gui_glass_polished  log_analyzer_gui_glass_polished_FINAL  log_analyzer_gui_glass_polished_v2  log_analyzer_gui_glass_polished_v3  log_analyzer_gui_updated  log_analyzer_gui_zen  log_analyzer_gui_zen_v2  main.cpp  test_catch2  vcpkg.json
.github/workflows/: ci.yml
analysis/: AnalysisContext.h  AnalysisResult.cpp  AnalysisResult.h  IAnalyzer.h  KeywordHitAnalyzer.cpp  KeywordHitAnalyzer.h  LevelCountAnalyzer.cpp  LevelCountAnalyzer.h  Pipeline.cpp  Pipeline.h  TimeRangeFilter.cpp  TimeRangeFilter.h  TopErrorAnalyzer.cpp  TopErrorAnalyzer.h
app/: AppRequest.h  AppResult.h  Application.cpp  Application.h
core/: ConfigManager.cpp  ConfigManager.h  ILogParser.h  LogEntry.h  LogLevel.h  LogParser.cpp  LogParser.h  ParseError.h  ParseResult.h  PatternLogParser.cpp  PatternLogParser.h  StandardLogParser.cpp  StandardLogParser.h  Timestamp.cpp  Timestamp.h
gui/: GuiController.cpp  GuiController.h  LogViewer.cpp  main_gui.cpp
io/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  MemoryMappedFile.cpp  MemoryMappedFile.h
report/: TextReportRenderer.cpp  TextReportRenderer.h
resources/: AppIcon.icns
tests/: sample_log.txt  test_analyzers.cpp  test_analyzers_catch2.cpp  test_main_catch2.cpp  test_parser.cpp  test_parser_catch2.cpp  test_pattern_parser.cpp
